--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,27 @@
-<html>
-  <title>Buy Me</title>
+<!DOCTYPE html>
+
+<html lang="en-US">
+    <head>
+    	<meta charset="UTF-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+      
+    <title>This domain is available</title>  
+      
+    <meta property="og:title" content="This domain is available"/>
+    <meta property="og:description" content=""/>
+    <meta property="og:url" content="<%= @domain %>"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="<%= @domain %>/mirrored_squares.png"/>
+
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="This domain is available"/>
+    <meta name="twitter:description" content=""/>
+    <meta name="twitter:url" content="<%= @domain %>"/>
+    <meta name="twitter:image" content="<%= @domain %>/mirrored_squares.png"/>
+      
+    <meta name="robots" content="noindex,nofollow" />
+      
+      
   <body>
     <%= @domain %>
     <%= @price %>
